--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,19 +30,19 @@ services:
     depends_on:
       - zookeeper
 
-  airflow:
-    image: apache/airflow:2.7.0
-    environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://sahab:sahab@db:5432/sahab
-      AIRFLOW__CORE__FERNET_KEY: your_fernet_key_here
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-    volumes:
-      - ./airflow/dags:/opt/airflow/dags
+  # airflow:
+  #   image: apache/airflow:2.7.0
+  #   environment:
+  #     AIRFLOW__CORE__EXECUTOR: LocalExecutor
+  #     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://sahab:sahab@db:5432/sahab
+  #     AIRFLOW__CORE__FERNET_KEY: your_fernet_key_here
+  #     AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - db
+  #   volumes:
+  #     - ./airflow/dags:/opt/airflow/dags
 
 volumes:
   db_data:
