--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,6 +40,7 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ../api:/app
+      - logs_data:/logs
     ports:
       - "8000:8000"
     depends_on:
@@ -57,6 +58,7 @@ services:
     command: python main.py
     volumes:
       - ../crawler:/app
+      - logs_data:/logs
     depends_on:
       - api
       - kafka
@@ -70,6 +72,7 @@ services:
     command: python main.py
     volumes:
       - ../consumer:/app
+      - logs_data:/logs
     depends_on:
       - db
       - kafka
@@ -89,19 +92,42 @@ services:
     depends_on:
       - db
 
-  # airflow:
-  #   image: apache/airflow:2.7.0
-  #   environment:
-  #     AIRFLOW__CORE__EXECUTOR: LocalExecutor
-  #     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://sahab:sahab@db:5432/sahab
-  #     AIRFLOW__CORE__FERNET_KEY: your_fernet_key_here
-  #     AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - db
-  #   volumes:
-  #     - ./airflow/dags:/opt/airflow/dags
+  airflow:
+    image: apache/airflow:2.7.0
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://sahab:sahab@db:5432/sahab
+      AIRFLOW__CORE__FERNET_KEY: q_oMVrOGCZ1-lFqv9xmmQRp7eLUYcwUl72H2v0-IasQ=
+      AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
+      AIRFLOW__WEBSERVER__SECRET_KEY: 1zbsvfqk74637S2LnVYkHctCMjEnDiQEPdH7p6UgFUg
+
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    volumes:
+      - ../airflow/dags:/opt/airflow/dags
+      - ../airflow/logs:/opt/airflow/logs
+      - ../airflow/plugins:/opt/airflow/plugins
+      - logs_data:/logs
+
+
+  log_collector:
+    build:
+      context: ../log_collector
+      dockerfile: Dockerfile
+    volumes:
+      - logs_data:/logs
+      - /var/run/docker.sock:/var/run/docker.sock  # Needed for Docker API access
+    depends_on:
+      - api
+      - crawler
+      - consumer
+      - kafka
+      - zookeeper
+      - airflow
+      - metabase
 
 volumes:
   db_data:
+  logs_data:
