--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -100,7 +100,6 @@ services:
       AIRFLOW__CORE__FERNET_KEY: q_oMVrOGCZ1-lFqv9xmmQRp7eLUYcwUl72H2v0-IasQ=
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__WEBSERVER__SECRET_KEY: 1zbsvfqk74637S2LnVYkHctCMjEnDiQEPdH7p6UgFUg
-
     ports:
       - "8080:8080"
     depends_on:
@@ -110,11 +109,17 @@ services:
       - ../airflow/logs:/opt/airflow/logs
       - ../airflow/plugins:/opt/airflow/plugins
       - logs_data:/logs
+      - ./airflow/logs:/opt/airflow/logs
+    command: >
+      bash -c "airflow db init &&
+              airflow db upgrade &&
+              airflow users create --username admin --firstname admin --lastname admin --role Admin --email admin@example.com --password admin &&
+              airflow scheduler & airflow webserver"
 
 
   log_collector:
     build:
-      context: ../log_collector
+      context: ../collector
       dockerfile: Dockerfile
     volumes:
       - logs_data:/logs
