--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ api/config/__pycache__/
 api/core/__pycache__/
 api/core/migrations/__pycache__/
 api/core/tests/__pycache__/
+
+
+docker/airflow/logs/
+docker/airflow/scheduler/
