--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -108,10 +108,13 @@ services:
       - ../airflow/dags:/opt/airflow/dags
       - ../airflow/logs:/opt/airflow/logs
       - ../airflow/plugins:/opt/airflow/plugins
+      - ../crawler:/opt/airflow/crawler
       - logs_data:/logs
       - ./airflow/logs:/opt/airflow/logs
+      - ../requirements.txt:/requirements.txt   # <-- add this line
     command: >
-      bash -c "airflow db init &&
+      bash -c "pip install -r /requirements.txt &&
+              airflow db init &&
               airflow db upgrade &&
               airflow users create --username admin --firstname admin --lastname admin --role Admin --email admin@example.com --password admin &&
               airflow scheduler & airflow webserver"
