--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-django
-djangorestframework
-drf-spectacular
-psycopg2-binary
-kafka-python
-google-play-scraper
-requests
-vaderSentiment
-apache-airflow
-schedule
+apache-airflow==3.0.3
+deep_translator==1.11.4
+django==5.2.4
+djangorestframework==3.16.0
+drf-spectacular==0.28.0
+google-play-scraper==1.2.7
+kafka-python==2.2.15
+psycopg2-binary==2.9.10
+requests==2.32.4
+schedule==1.2.2
+transformers==4.54.1
+
+
