fix sentiment analysis, TODO:CleanUP

--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,6 +1,14 @@
 FROM python:3.10
+
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
+
+RUN pip install typing-extensions
+RUN pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cpu
+
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+COPY . /app
 CMD ["python", "main.py"]
+
+
