--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.10
+
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY . .
+
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+COPY . /app
 CMD ["python", "main.py"]
