--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,8 +33,8 @@ services:
 
   api:
     build:
-      context: ..
-      dockerfile: api/Dockerfile
+      context: ../api
+      dockerfile: Dockerfile
     command: >
           sh -c "pip freeze && python manage.py makemigrations && python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
@@ -52,8 +52,8 @@ services:
 
   crawler:
     build:
-      context: ..
-      dockerfile: crawler/Dockerfile
+      context: ../crawler
+      dockerfile: Dockerfile
     command: python main.py
     volumes:
       - ../crawler:/app
@@ -65,9 +65,10 @@ services:
 
   consumer:
     build:
-      context: ..
-      dockerfile: consumer/Dockerfile
-    command: python main.py
+      context: ../consumer
+      dockerfile: Dockerfile
+    command: > 
+      sh -c "pip freeze && python main.py"
     volumes:
       - ../consumer:/app
 
