--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-apache-airflow==3.0.3
 deep_translator==1.11.4
 django==5.2.4
 djangorestframework==3.16.0
@@ -8,6 +7,7 @@ kafka-python==2.2.15
 psycopg2-binary==2.9.10
 requests==2.32.4
 schedule==1.2.2
+torch==2.6.0
 transformers==4.54.1
 
 
