--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+      - name: Make `run.sh` Executable
+        run: chmod +x docker/run.sh
 
       - name: Start Services
-        run: |
-          docker compose down
-          docker compose up -d
+        run: ./docker/run.sh
 
   test:
     name: Run Tests
@@ -42,14 +38,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+      - name: Make `run.sh` Executable
+        run: chmod +x docker/run.sh
 
-      - name: Run Django Tests
-        run: |
-          docker compose exec api python manage.py test
+      - name: Run Tests
+        run: ./docker/run.sh
 
   deploy:
     name: Deploy Services
@@ -63,12 +56,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+      - name: Make `run.sh` Executable
+        run: chmod +x docker/run.sh
 
       - name: Deploy Services
-        run: |
-            docker compose down
-            docker compose up -d
+        run: ./docker/run.sh
