--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Make `run.sh` Executable
-        run: chmod +x docker/run.sh
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
       - name: Start Services
-        run: ./docker/run.sh
+        run: |
+          docker compose down
+          docker compose up -d
 
   test:
     name: Run Tests
@@ -38,11 +42,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Make `run.sh` Executable
-        run: chmod +x docker/run.sh
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      - name: Run Tests
-        run: ./docker/run.sh
+      - name: Run Django Tests
+        run: |
+          docker compose exec api python manage.py test
 
   deploy:
     name: Deploy Services
@@ -56,8 +63,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Make `run.sh` Executable
-        run: chmod +x docker/run.sh
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
       - name: Deploy Services
-        run: ./docker/run.sh
+        run: |
+            docker compose up -d
+            docker compose exec kafka kafka-topics.sh --create --topic app_stats --partitions 1 --replication-factor 1 --bootstrap-server localhost:9092 || true
+            docker compose exec kafka kafka-topics.sh --create --topic app_reviews --partitions 1 --replication-factor 1 --bootstrap-server localhost:9092 || true
+            docker compose exec kafka kafka-topics.sh --alter --topic app_stats --partitions 3 --bootstrap-server localhost:9092
+            docker compose exec kafka kafka-topics.sh --alter --topic app_reviews --partitions 3 --bootstrap-server localhost:9092
+            docker compose up -d --scale consumer=3
